--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.33.4",
     "stripe": "^16.1.0"
   },
   "devDependencies": {
